Los filtros no se le aplicaban a lo que está en el disco, y una identificación vieja no se revisaba nunca
`!result.onThisMachine && (...)` en el removeIf quiere decir "a los juegos de esta máquina no les
apliques ningún filtro", así que tildar RZX dejaba todos los locales en la galería y el filtro
parecía roto. En la red andaba: nueve juegos para "renegade" bajan a cuatro con RZX tildado,
medido. Ahora se le pregunta a todo, venga de donde venga.

Para poder preguntarle a un juego del disco hacía falta saber, sin red, qué tiene. Las grabaciones
ya se sabían —el archivo del RZX Archive viaja como dato y está indexado por el mismo entry_id—,
así que lo que faltaba era el mapa. Y ya que el catálogo iba a decir eso, dice también cómo se ve
el juego: `Known` gana `screenshot` y `hasMap`.

Eso contradice lo que yo mismo había propuesto —guardar sólo el id y pedirle las pantallas al API—,
y el motivo es que ese plan tenía un agujero que sólo se ve del lado local: un juego de la red
viene con su pantalla adentro de la respuesta de búsqueda, pero uno del disco es un archivo y un
id. Pintar la galería costaba un pedido al API por ficha, sesenta por pantallazo, y sin internet no
se veía ninguna. Medido sobre las primeras 491 entradas reconstruidas: 1050 -> 1139 bytes por
juego, o sea el catálogo de 927 KB a 1005 KB, +8%. A cambio la galería no hace un solo pedido para
dibujarse y el caché de pantallas que había escrito sobra: `LocalGames` baja de 147 a 82 líneas.

Un ítem por juego en la galería, que es para lo que está el fingerprint: el agrupado que hacía
sólo con las copias locales pasa a ser una función que fusiona todo lo encontrado. Siete Manic
Miner en siete carpetas y la entrada de ZXInfo son ocho cosas y un juego. Las copias del disco van
primero en la lista, así lo que carga un clic es el archivo que ya está acá, y las demás versiones
—incluida la de la web— quedan bajo Load Version. Lo que no se pudo identificar es su propio juego,
porque no hay con qué decir que no